feat(file transfer): :sparkles: write skeleton code for webrtc offer/answer exchange in client
Wrote skeleton code for WebRTC offer/answer exchange in client only (not actually exchanging descriptions yet via server).

--- a/client/src/templates/index.html
+++ b/client/src/templates/index.html
@@ -7,6 +7,6 @@
     <title>Upload</title>
   </head>
   <body>
-    <h1>This is the upload page.</h1>
+    <input type="file" id="fileInput" />
   </body>
 </html>
