feat(client): :sparkles: add loading state

--- a/client/src/shared/style.css
+++ b/client/src/shared/style.css
@@ -86,12 +86,16 @@ a {
   color: var(--primary-color);
 }
 
-#footer {
-  margin-top: auto;
-  font-size: 16px;
-}
-
 #error {
   display: none;
   gap: 8px;
+}
+
+#loading {
+  display: none;
+}
+
+#footer {
+  margin-top: auto;
+  font-size: 16px;
 }
