--- a/client/src/shared/style.css
+++ b/client/src/shared/style.css
@@ -38,7 +38,7 @@ body {
 }
 
 button {
-  padding-top: 8px; /* todo: replace px with rem */
+  padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 32px;
   padding-right: 32px;
